--- a/style.css
+++ b/style.css
@@ -1,6 +1,48 @@
+header h1{
+    font-size: 20px;
+    margin-left: 100px;
+}
+
 body {
     font-family: 'Poppins', sans-serif;
 }
+
+/* start-journey */
+.flexible {
+    display: flex;
+}
+.start-journey {
+    padding-left: 5%;
+    padding-right: 5%;
+}
+.stay-journey-head h1 {
+    font-size: 50px;
+}
+.half-width {
+    width: 50%;
+    padding: 5%;
+}
+.half-width img {
+    width: 100%;
+}
+.link-button {
+    text-decoration: none;
+    color: white;
+    background-color: purple;
+    font-weight: bold;
+    padding: 5px 30px;
+    border-radius: 5px;
+}
+
+/* logos */
+.logos {
+    display: flex;
+    justify-content: space-between;
+    padding-left: 200px;
+    padding-right: 200px;
+}
+
+/* popular */
 .items {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -29,6 +71,7 @@ h3 {
 .popular {
     margin-left: 80px;
     margin-right: 80px;
+    margin-bottom: 50px;
 }
 .popular-head {
  text-align: center;
@@ -55,4 +98,12 @@ h3 {
     font-weight: bold;
     color: gray;
     margin-left: 10px;
+}
+
+/* footer */
+footer {
+    padding: 5px;
+    text-align: center;
+    color: white;
+    background-color: darkslategrey;
 }
