--- a/style.css
+++ b/style.css
@@ -108,6 +108,23 @@ h3 {
     font-weight: bold;
 }
 
+/* accessories */
+.accessories {
+    padding: 5%;
+}
+.less-width {
+    width: 40%;
+    padding: 2%;
+}
+.less-width img {
+    width: 100%;
+    border-radius: 20px;
+}
+.more-width {
+    width: 60%;
+    padding: 2%;
+}
+
 /* footer */
 footer {
     padding: 5px;
