--- a/style.css
+++ b/style.css
@@ -137,6 +137,9 @@ footer {
 
 /* mobile */
 @media only screen and (max-width: 688px) {
+    .logos {
+        flex-direction: column;
+    }
     .items {
         grid-template-columns: repeat(1, 1fr);
     }
