--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+.top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 header h1{
     font-size: 20px;
     margin-left: 100px;
